# front/src/main/resources/swagger/front.yml
@@ -13,7 +13,7 @@ paths:
     get:
       tags:
         - client
-      summary: get clint by id
+      summary: get client by id
       operationId: getById
       parameters:
         - name: id
@@ -24,12 +24,83 @@ paths:
             format: int64
       responses:
         200:
-          description: ZBS
+          description: OK
           content:
             application/json:
               schema:
                 $ref: "#/components/schemas/ClientGetResultDto"
-
+  "/simple/client":
+    get:
+      tags:
+        - client
+      summary: get all clients
+      operationId: getAll
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/ClientGetResultDto"
+  "/simple/client/post":
+    post:
+      tags:
+        - client
+      summary: add client to db
+      operationId: addClient
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/ClientPostDto"
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ClientPostResultDto"
+  "/simple/client/update":
+    put:
+      tags:
+        - client
+      summary: update client in db
+      operationId: updateClient
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/ClientUpdateDto"
+        required: true
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ClientUpdateResultDto"
+  "/simple/client/delete/{id}":
+    delete:
+      tags:
+        - client
+      summary: delete client from db
+      operationId: deleteClient
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int64
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: string
 
 components:
   schemas:
@@ -47,5 +118,59 @@ components:
           type: string
         phoneNumber:
           type: string
+    ClientPostResultDto:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        name:
+          type: string
+        surname:
+          type: string
+        email:
+          type: string
+        phoneNumber:
+          type: string
+    ClientPostDto:
+      type: object
+      properties:
+        name:
+          type: string
+        surname:
+          type: string
+        email:
+          type: string
+        phoneNumber:
+          type: string
+    ClientUpdateDto:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        name:
+          type: string
+        surname:
+          type: string
+        email:
+          type: string
+        phoneNumber:
+          type: string
+    ClientUpdateResultDto:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        name:
+          type: string
+        surname:
+          type: string
+        email:
+          type: string
+        phoneNumber:
+          type: string
+
 
 
